Add Adopt me button and add AdoptUrl to repo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
       -->
     <string name="app_name">AndroidDevChallenge</string>
     <string name="adopt_happily">Adopt Happily!</string>
+    <string name="adopt_me_title">Adopt Me!</string>
 </resources>
